--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,10 +1,12 @@
-﻿@{
+﻿@model Entities.Concrete.DisasterType
+
+@{
     ViewData["Title"] = "Home Page";
 }
-<div class="container-fluid bg-primary">
+<div class="container-fluid bg-secondary">
 
     <div class="row bg-dark d-flex ">
-        <div class="col-4 border border-light">
+        <div class="col-4">
             <div class="text-light m-3">
                 <span class="font-weight-bold " style="font-size:1.4em;font-family:Arial, Helvetica, sans-serif">Afet Giriş</span>
             </div>
@@ -15,23 +17,23 @@
 
     <div class="row d-flex mt-4">
 
-        <div class="col-md-2 border border-light d-flex">
+        <div class="col-md-2 d-flex">
             <span>Seri No</span>
         </div>
 
-        <div class="col-md-2 border border-light">
+        <div class="col-md-2">
             <form class="form-group p-0 mh-100 mw-100" method="post">
-                <input type="text" placeholder="Seri No" />
+                <input type="text" placeholder="Seri No" name="SerialNumber" class="form-control" />
             </form>
         </div>
 
-        <div class="col-md-2 border border-light align-items-start">
+        <div class="col-md-2 align-items-start">
             <span>GLIDE No</span>
         </div>
 
-        <div class="col-md-2 border border-light align-items-start">
+        <div class="col-md-2 align-items-start">
             <form class="form-group" method="post">
-                <input type="text" placeholder="Glide No" />
+                <input type="text" placeholder="Glide No" name="GlideNumber" class="form-control" />
             </form>
         </div>
 
@@ -45,7 +47,7 @@
         </div>
         <div class="col-md-2">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" name="StartDate" class="form-control" />
             </form>
         </div>
         <div class="col-md-2">
@@ -53,7 +55,7 @@
         </div>
         <div class="col-md-2">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" name="EndDate" class="form-control" />
             </form>
         </div>
         <div class="col-md-2">
@@ -61,13 +63,9 @@
         </div>
         <div class="col-md-2">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" name="NumberOfDays" class="form-control" />
             </form>
         </div>
-
-
-
-
 
     </div>
 
@@ -76,16 +74,23 @@
             <span>Afet Türü</span>
         </div>
         <div class="col-md-2">
-            <form class="form-group" method="post">
-                <input type="text" placeholder="" />
-            </form>
+            @using (Html.BeginForm("Index", "Home", FormMethod.Get))
+            {
+                <div class="form-group">
+                    @*@Html.Label("Afet Türü")*@
+                    @Html.DropDownListFor(x => x.Id, (List<SelectListItem>)ViewBag.vlc, new { @class = "form-control" })
+
+                </div>
+
+            }
         </div>
+
         <div class="col-md-2">
             <span>İl</span>
         </div>
         <div class="col-md-2">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" class="form-control" />
             </form>
         </div>
         <div class="col-md-2">
@@ -93,10 +98,11 @@
         </div>
         <div class="col-md-2">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" class="form-control" />
             </form>
         </div>
     </div>
+
 
     <div class="row d-flex mt-4">
         <div class="col-md-2">
@@ -104,7 +110,7 @@
         </div>
         <div class="col-md-2">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" class="form-control" />
             </form>
         </div>
         <div class="col-md-2">
@@ -112,7 +118,7 @@
         </div>
         <div class="col-md-2">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" class="form-control" />
             </form>
         </div>
         <div class="col-md-2">
@@ -120,7 +126,7 @@
         </div>
         <div class="col-md-2">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" class="form-control" />
             </form>
         </div>
     </div>
@@ -131,7 +137,7 @@
         </div>
         <div class="col-md-2">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" class="form-control" />
             </form>
         </div>
         <div class="col-md-2">
@@ -139,7 +145,7 @@
         </div>
         <div class="col-md-2">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" name="Latitude" class="form-control" />
             </form>
         </div>
         <div class="col-md-2">
@@ -147,7 +153,7 @@
         </div>
         <div class="col-md-2">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" name="Longitude" class="form-control" />
             </form>
         </div>
     </div>
@@ -158,7 +164,7 @@
         </div>
         <div class="col-md-8">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" class="form-control" />
             </form>
         </div>
     </div>
@@ -169,7 +175,7 @@
         </div>
         <div class="col-md-8">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" class="form-control" />
             </form>
         </div>
     </div>
@@ -180,11 +186,30 @@
         </div>
         <div class="col-md-8">
             <form class="form-group" method="post">
-                <input type="text" placeholder="" />
+                <input type="text" placeholder="" class="form-control" />
             </form>
         </div>
     </div>
 
+    @*<div class="row d-flex mt-4">
+            <div class="col-md-2">
+                <span>ResimId</span>
+            </div>
+            <div class="col-md-8">
+                <form class="form-group" method="post">
+                    <input type="text" placeholder="" name="DisasterImgId" class="form-control"/>
+                </form>
+            </div>
+        </div>*@
+<div class="row d-flex">
+    @*<form class="form-group" method="post">
 
+        </form>*@
+    <div class="col-md d-flex justify-content-end">
+        <button class="btn btn-primary">Kaydet</button>
+    </div>
+    
+</div>
+   
 
 </div>
