--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,8 +1,76 @@
-﻿@model Entities.Concrete.DisasterType
+﻿@using Entities.Concrete
+@model WebApplication1.Models.Class
 
 @{
     ViewData["Title"] = "Home Page";
 }
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script>
+
+    $(function () {
+
+        $('#DrpCity').change(function () {
+
+            var Id = $('#DrpCity').val();
+
+            $.ajax({
+
+                url: '/Home/GetTownsByCityId',
+
+                data: { cityId: Id },
+
+                type: "POST",
+
+                dataType: "Json",
+
+                success: function (data) {
+
+                    console.log(data);
+
+                    $('#DrpTown').empty();
+
+                    for (var i = 0; i < data.length; i++) {
+
+                        $('#DrpTown').append("<option value='" + data[i].value + "'>" + data[i].text + "</Option>");
+
+                    }
+                }
+
+            });
+
+        });
+        $('#DrpTown').change(function () {
+
+            var Id = $('#DrpTown').val();
+            $.ajax({
+                url: '/Home/GetDistrictsByTownId',
+
+                data: { townId: Id },
+
+                type: "POST",
+
+                dataType: "Json",
+
+                success: function (data) {
+
+                    console.log(data);
+
+                    $('#DrpDistrict').empty();
+
+                    for (var i = 0; i < data.length; i++) {
+
+                        $('#DrpDistrict').append("<option value='" + data[i].value + "'>" + data[i].text + "</Option>");
+
+                    }
+                }
+            })
+        });
+    });
+
+
+</script>
+
+
 <div class="container-fluid bg-secondary">
 
     <div class="row bg-dark d-flex ">
@@ -75,12 +143,13 @@
         </div>
         <div class="col-md-2">
             @using (Html.BeginForm("Index", "Home", FormMethod.Get))
-            {
-                <div class="form-group">
-                    @*@Html.Label("Afet Türü")*@
-                    @Html.DropDownListFor(x => x.Id, (List<SelectListItem>)ViewBag.vlc, new { @class = "form-control" })
-
-                </div>
+                {
+                    
+            <div class="form-group">
+                @*@Html.Label("Afet Türü")*@
+                @*@Html.DropDownListFor(x => , (List<SelectListItem>)ViewBag.vlc, new { @class = "form-control" })*@
+                @Html.DropDownList("DrpDisaster", Model.DisasterTypes, "Afet Seçin", new { @class = "form-control" })
+            </div>
 
             }
         </div>
@@ -89,29 +158,48 @@
             <span>İl</span>
         </div>
         <div class="col-md-2">
-            <form class="form-group" method="post">
-                <input type="text" placeholder="" class="form-control" />
-            </form>
+            @using (Html.BeginForm("Index", "Home", FormMethod.Get))
+            {
+            <div class="form-group">
+                @*<a href="/Home/GetTownsByCityId/@Model"> @Html.DropDownListFor(x => x.Id, (List<SelectListItem>)ViewBag.vlct, "İl Seçiniz", new { @class = "form-control" })</a>*@
+               
+                @Html.DropDownList("DrpCity", Model.Cities,"Şehir Seçin", new { @class = "form-control" })
+
+            </div>
+
+            }
+
         </div>
         <div class="col-md-2">
             <span>İlçe</span>
         </div>
         <div class="col-md-2">
-            <form class="form-group" method="post">
-                <input type="text" placeholder="" class="form-control" />
-            </form>
+            @using (Html.BeginForm("Index", "Home", FormMethod.Get))
+            {
+            <div class="form-group">
+                @*@Html.Label("Afet Türü")*@
+                @*@Html.DropDownListFor(x => , (List<SelectListItem>)ViewBag.vlt, "İlçe Seçiniz", new { @class = "form-control" })*@
+                @Html.DropDownList("DrpTown", Model.Towns, "İlçe Seçin", new { @class = "form-control" })
+            </div>
+
+            }
         </div>
     </div>
 
 
     <div class="row d-flex mt-4">
         <div class="col-md-2">
-            <span>Köy</span>
+            <span>Semt</span>
         </div>
         <div class="col-md-2">
-            <form class="form-group" method="post">
-                <input type="text" placeholder="" class="form-control" />
-            </form>
+            @using (Html.BeginForm("Index", "Home", FormMethod.Get))
+            {
+            <div class="form-group">
+                @*@Html.DropDownListFor(x => x.Id, (List<SelectListItem>)ViewBag.vld, "Semt Seçiniz",new { @class = "form-control" })*@
+                @Html.DropDownList("DrpDistrict", Model.Districts, "Semt Seçin", new { @class = "form-control" })
+            </div>
+
+            }
         </div>
         <div class="col-md-2">
             <span>Mahalle</span>
