--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewData["Title"] - WebApplication1</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    @*<script src="~/lib/jquery/dist/jquery.min.js"></script>*@
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
 </head>
 <body>
     <header>
