--- a/WebApplication1/Views/Disasters/GetDisasterList.cshtml
+++ b/WebApplication1/Views/Disasters/GetDisasterList.cshtml
@@ -50,7 +50,8 @@
                     <td>@item.CauseDescription</td>
                     <td>@item.AffectedAreas</td>
                     <td>@item.Source</td>
-                    <td><a href="/Disasters/DeleteDisaster/@item.DisasterId" class="btn btn-primary">Sil</a></td>
+                    <td class="text-nowrap"><a href="/Disasters/DeleteDisaster/@item.DisasterId" class="btn btn-primary">Sil</a>
+                        <a href="/Disasters/UpdateDisaster/@item.DisasterId" class="btn btn-primary">Güncelle</a></td>
                 </tr>
 
                  }
